Azure/Prod/resource_nsg_pri.tf
resource "azurerm_network_security_group" "gateway_pri" {
  name                = "${var.project}-${var.environment}-${var.nsg}-gateway-pri"
  location            = var.region
  resource_group_name = azurerm_resource_group.vnet.name
  tags = {
    environment = var.environment
  }
}

resource "azurerm_subnet_network_security_group_association" "gateway_pri" {
  subnet_id                 = azurerm_subnet.gateway_pri.id
  network_security_group_id = azurerm_network_security_group.gateway_pri.id
}

resource "azurerm_network_security_rule" "BWP_pri" {
  name                        = "AllowBwpGovIp"
  resource_group_name         = azurerm_resource_group.vnet.name
  network_security_group_name = azurerm_network_security_group.gateway_pri.name
  destination_address_prefix  = "*"
  source_address_prefix       = var.gov_ip_add
  source_port_range           = "*"
  destination_port_ranges     = [ "80", "433"  ]
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "TCP"
  priority                    = "150"
  description                 = "Allow staff access who work within Bridgewater Place"

}

resource "azurerm_network_security_rule" "BJSS_pri" {
  name                        = "AllowBjssVpn"
  resource_group_name         = azurerm_resource_group.vnet.name
  network_security_group_name = azurerm_network_security_group.gateway_pri.name
  source_address_prefix       = var.bjss_ip_add
  destination_address_prefix  = "*"
  source_port_range           = "*"
  destination_port_ranges     = [ "80", "433"  ]
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "TCP"
  priority                    = "160"
  description                 = "Allow staff access who are connect to the BJSS VPN"

}

resource "azurerm_network_security_rule" "GovWfh_pri" {
  name                        = "AllowGovWfhStaff"
  resource_group_name         = azurerm_resource_group.vnet.name
  network_security_group_name = azurerm_network_security_group.gateway_pri.name
  source_address_prefixes     = var.gov_wfh_ip_add
  destination_address_prefix  = "*"  
  source_port_range           = "*"
  destination_port_ranges     = [ "80", "443"  ]
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "*"
  priority                    = "180"
  description                 = var.gov_wfh_ip_desc
}

resource "azurerm_network_security_rule" "DevOps_pri" {
  name                        = "AllowAzureDevOps"
  resource_group_name         = azurerm_resource_group.vnet.name
  network_security_group_name = azurerm_network_security_group.gateway_pri.name
  source_address_prefix       = "AzureCloud"
  destination_address_prefix  = "*"
  source_port_range           = "*"
  destination_port_ranges     = [ "80", "433"  ]
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "TCP"
  priority                    = "200"
  description                 = "Allow AzureDevops Access to Kubernetes Cluster Private"

}

resource "azurerm_network_security_rule" "Azure_pri" {
  name                        = "AllowAzureInfrastructurePorts"
  resource_group_name         = azurerm_resource_group.vnet.name
  network_security_group_name = azurerm_network_security_group.gateway_pri.name
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  source_port_range           = "*"
  destination_port_range      = "65200-65535"
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "TCP"
  priority                    = "500"
  description                 = "Allow incoming Azure Gateway Manager and inbound virtual network traffic (VirtualNetwork tag) on the NSG."

}
